# glad

./: .gitignore  BUILD.bazel  WORKSPACE
bazel/: BUILD.bazel  cc.bzl
glad/: BUILD.bazel
