load(
  "@io_bazel_rules_python//python:python.bzl",
  "py_binary", "py_library", "py_test",
)

load("@glad_deps//:requirements.bzl", "requirement")

py_binary(
  name = "glad",
  main = "__main__.py",
  visibility = ["//visibility:public"],
  srcs = glob(["**/*.py"]),
  data = glob(["files/**/*", "generator/**/*"]),
  deps = [
    requirement("jinja2"),
    requirement("markupsafe"),
  ],
)
